# vitaGL_shader_renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt  frag.cgf  frag.glsl  frag_mm_shadow.glsl  frag_new.cgf  frag_new.glsl  vert.cgv  vert.glsl  vert_new.cgv  vert_new.glsl
res/: cone_test.glb  cone_test_gltf.gltf  frag_new.glsl  vert.cgv  vert.glsl
src/: SHADERS.h  basic_hash_map.h  load_texture.h  main.c  vgl_renderer.c  vgl_renderer.h  vgl_renderer_db.c  vgl_renderer_types.h
src/OLD_DNU/: basic_hash_map.h  load_texture.h  vgl_renderer.c  vgl_renderer_types.h
src/version2/: common.h  main.c  vgl3d.h  vgl3d_debug.h  vgl3d_gl2es.c  vgl3d_gl2es_textures.h
src/version2/input/: tesla_input.h  tesla_input_gamepad_null.c  tesla_input_glfw.c  tesla_input_mouse_glfw.c  tesla_input_vita.c
src/version2/mesh/: mesh.c  mesh.h
src/version2/vgl3d_metal/: vgl3d_metal_private.h  vgl3d_metal_private.m
src/version2/vgl3d_metal/mul/: mul.m  mul_default_shader.h
src/vgl3d/: vgl3d_gl2es_textures.h
src/vgl3d/input/: tesla_input.h
src/vgl3d/mesh/: mesh.c  mesh.h
src/vgl3d/vgl3d_metal/: vgl3d_metal.c  vgl3d_metal_private.h  vgl3d_metal_private.m
src/vgl3d/vgl3d_metal/mul/: mul.h
